--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,10 @@
 # Process this file with automake to produce Makefile.in
 
+
+ACLOCAL_AMFLAGS = -I m4
+
 SUBDIRS = \
 	src
-
 
 dist_doc_DATA = \
 	AUTHORS \
@@ -11,12 +13,10 @@ dist_doc_DATA = \
 	NEWS \
 	README
 
-
 INTLTOOL_FILES = \
 	intltool-extract.in \
 	intltool-merge.in \
 	intltool-update.in
-
 
 EXTRA_DIST = \
 	ChangeLog.md \
@@ -26,7 +26,6 @@ EXTRA_DIST = \
 	bootstrap \
 	package.json \
 	$(INTLTOOL_FILES)
-
 
 DISTCLEANFILES = \
 	intltool-extract \
@@ -40,21 +39,18 @@ if NLS_ENABLED
 SUBDIRS += \
 	po
 
-else
+else !NLS_ENABLED
 
 EXTRA_DIST += \
 	po
 
-
-endif
+endif !NLS_ENABLED
 
 
 # Remove doc directory on uninstall
 uninstall-local:
 	-rm -r '$(DESTDIR)$(docdir)'
 
-
-ACLOCAL_AMFLAGS = -I m4
 
 # EOF
 
