--- a/configure.ac
+++ b/configure.ac
@@ -8,7 +8,11 @@ dnl  ***************************************************************************
 
 AC_PREREQ([2.69])
 
-AC_INIT([nautilus-launch], [0.1], [madmurphy333@gmail.com], [nautilus-launch], [https://github.com/madmurphy/nautilus-launch])
+AC_INIT([Nautilus Launch],
+	[0.1.1],
+	[madmurphy333@gmail.com],
+	[nautilus-launch],
+	[https://github.com/madmurphy/nautilus-launch])
 
 AC_CONFIG_MACRO_DIR([m4])
 
@@ -45,7 +49,7 @@ IT_PROG_INTLTOOL([0.35.0])
 AM_CONDITIONAL([NLS_ENABLED], [test "x${USE_NLS}" != xno])
 
 AM_COND_IF([NLS_ENABLED],
-	[AC_SUBST([GETTEXT_PACKAGE], AC_PACKAGE_NAME)
+	[AC_SUBST([GETTEXT_PACKAGE], AC_PACKAGE_TARNAME)
 	AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE], ["${GETTEXT_PACKAGE}"], [GETTEXT package name])
 	AM_GLIB_GNU_GETTEXT
 	AM_GLIB_DEFINE_LOCALEDIR([NAUTILUS_LAUNCH_LOCALEDIR])])
