--- a/configure.ac
+++ b/configure.ac
@@ -9,10 +9,10 @@ dnl  ***************************************************************************
 AC_PREREQ([2.69])
 
 AC_INIT([Nautilus Launch],
-	[1.0.0],
+	[1.0.1],
 	[madmurphy333@gmail.com],
 	[nautilus-launch],
-	[https://github.com/madmurphy/nautilus-launch])
+	[https://gitlab.gnome.org/madmurphy/nautilus-launch])
 
 AC_CONFIG_MACRO_DIR([m4])
 
@@ -36,7 +36,8 @@ PKG_CHECK_MODULES([NAUTILUS_LAUNCH], [glib-2.0 libnautilus-extension])
 
 AC_CHECK_PROG([HAVE_PKGCONFIG], [pkg-config], [yes], [no])
 
-AS_IF([test "x${HAVE_PKGCONFIG}" = xno], [AC_MSG_ERROR([you need to have pkgconfig installed!])])
+AS_IF([test "x${HAVE_PKGCONFIG}" = xno],
+	[AC_MSG_ERROR([you need to have pkgconfig installed!])])
 
 
 dnl  ***************************************************************************
@@ -48,11 +49,13 @@ IT_PROG_INTLTOOL([0.35.0])
 
 AM_CONDITIONAL([NLS_ENABLED], [test "x${USE_NLS}" != xno])
 
-AM_COND_IF([NLS_ENABLED],
-	[AC_SUBST([GETTEXT_PACKAGE], AC_PACKAGE_TARNAME)
-	AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE], ["${GETTEXT_PACKAGE}"], [GETTEXT package name])
+AM_COND_IF([NLS_ENABLED], [
+	AC_SUBST([GETTEXT_PACKAGE], AC_PACKAGE_TARNAME)
+	AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE],
+		["${GETTEXT_PACKAGE}"], [GETTEXT package name])
 	AM_GLIB_GNU_GETTEXT
-	AM_GLIB_DEFINE_LOCALEDIR([NAUTILUS_LAUNCH_LOCALEDIR])])
+	AM_GLIB_DEFINE_LOCALEDIR([NAUTILUS_LAUNCH_LOCALEDIR])
+])
 
 
 dnl  ***************************************************************************
@@ -60,7 +63,8 @@ dnl     F I N A L I Z A T I O N
 dnl  ***************************************************************************
 
 
-AC_SUBST([NAUTILUS_EXTENSION_DIR], [$($PKG_CONFIG --variable=extensiondir libnautilus-extension)])
+AC_SUBST([NAUTILUS_EXTENSION_DIR],
+	["$($PKG_CONFIG --variable=extensiondir libnautilus-extension)"])
 
 LT_INIT([disable-static])
 
