--- a/configure.ac
+++ b/configure.ac
@@ -1,15 +1,15 @@
 dnl  Process this file with autoconf to produce a configure script.
 
 
-dnl  ***************************************************************************
+dnl  **************************************************************************
 dnl     A U T O C O N F   E N V I R O N M E N T
-dnl  ***************************************************************************
+dnl  **************************************************************************
 
 
 AC_PREREQ([2.69])
 
 AC_INIT([Nautilus Launch],
-	[1.0.3],
+	[1.0.4],
 	[madmurphy333@gmail.com],
 	[nautilus-launch],
 	[https://gitlab.gnome.org/madmurphy/nautilus-launch])
@@ -32,6 +32,8 @@ AM_SILENT_RULES([yes])
 
 AC_PROG_CC
 
+AC_PROG_GREP
+
 PKG_CHECK_MODULES([NAUTILUS_LAUNCH], [glib-2.0 libnautilus-extension])
 
 AC_CHECK_PROG([HAVE_PKGCONFIG], [pkg-config], [yes], [no])
@@ -40,12 +42,13 @@ AS_IF([test "x${HAVE_PKGCONFIG}" = xno],
 	[AC_MSG_ERROR([you need to have pkgconfig installed!])])
 
 
-dnl  ***************************************************************************
+dnl  **************************************************************************
 dnl     I N T E R N A T I O N A L I Z A T I O N
-dnl  ***************************************************************************
+dnl  **************************************************************************
 
+AM_GNU_GETTEXT([external])
 
-IT_PROG_INTLTOOL([0.35.0])
+AM_GNU_GETTEXT_VERSION([0.21])
 
 AM_CONDITIONAL([NLS_ENABLED], [test "x${USE_NLS}" != xno])
 
@@ -53,20 +56,31 @@ AM_COND_IF([NLS_ENABLED], [
 	AC_SUBST([GETTEXT_PACKAGE], AC_PACKAGE_TARNAME)
 	AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE],
 		["${GETTEXT_PACKAGE}"], [GETTEXT package name])
-	AM_GLIB_GNU_GETTEXT
-	AM_GLIB_DEFINE_LOCALEDIR([NAUTILUS_LAUNCH_LOCALEDIR])
 ])
 
 
-dnl  ***************************************************************************
+dnl  **************************************************************************
 dnl     F I N A L I Z A T I O N
-dnl  ***************************************************************************
+dnl  **************************************************************************
 
+AC_ARG_WITH([nautilus-libdir],
+	[AS_HELP_STRING([--without-nautilus-libdir],
+		[ignore the <libdir> variable used by libnautilus-extension and
+		and use the current <libdir> instead @<:@default=no@:>@])],
+	[:],
+	[AS_VAR_SET([with_nautilus_libdir], ['yes'])])
 
-AC_SUBST([NAUTILUS_EXTENSION_DIR], m4_normalize(["$(
-	"${PKG_CONFIG}" --define-variable='libdir=${libdir}'
-		--variable=extensiondir libnautilus-extension
-)"]))
+AS_IF([test "x${with_nautilus_libdir}" = xno],
+	[AS_VAR_SET([NAUTILUS_EXTENSION_DIR], m4_normalize(["$(
+		"${PKG_CONFIG}" --define-variable='libdir=${libdir}'
+			--variable=extensiondir libnautilus-extension
+	)"]))],
+	[AS_VAR_SET([NAUTILUS_EXTENSION_DIR], m4_normalize(["$(
+		"${PKG_CONFIG}" --variable=extensiondir libnautilus-extension
+	)"]))])
+
+AC_SUBST([NAUTILUS_EXTENSION_DIR])
+
 
 LT_INIT([disable-static])
 
