--- a/configure.ac
+++ b/configure.ac
@@ -9,7 +9,7 @@ dnl  **************************************************************************
 AC_PREREQ([2.69])
 
 AC_INIT([Nautilus Launch],
-	[1.0.6],
+	[2.0.0],
 	[madmurphy333@gmail.com],
 	[nautilus-launch],
 	[https://gitlab.gnome.org/madmurphy/nautilus-launch])
@@ -39,7 +39,8 @@ AC_CHECK_PROG([HAVE_PKGCONFIG], [pkg-config], [yes], [no])
 AS_IF([test "x${HAVE_PKGCONFIG}" = xno],
 	[AC_MSG_ERROR([you need to have pkgconfig installed!])])
 
-PKG_CHECK_MODULES([NAUTILUS_LAUNCH], [glib-2.0 libnautilus-extension])
+PKG_CHECK_MODULES([NAUTILUS_LAUNCH], [glib-2.0 gio-unix-2.0
+	libnautilus-extension-4])
 
 
 dnl  **************************************************************************
@@ -65,18 +66,18 @@ dnl  **************************************************************************
 
 AC_ARG_WITH([nautilus-libdir],
 	[AS_HELP_STRING([--without-nautilus-libdir],
-		[ignore the <libdir> variable used by libnautilus-extension and
-		and use the current <libdir> instead @<:@default=no@:>@])],
+		[ignore the <libdir> variable used by libnautilus-extension-4
+		and and use the current <libdir> instead @<:@default=no@:>@])],
 	[:],
 	[AS_VAR_SET([with_nautilus_libdir], ['yes'])])
 
 AS_IF([test "x${with_nautilus_libdir}" = xno],
 	[AS_VAR_SET([NAUTILUS_EXTENSION_DIR], m4_normalize(["$(
 		"${PKG_CONFIG}" --define-variable='libdir=${libdir}'
-			--variable=extensiondir libnautilus-extension
+			--variable=extensiondir libnautilus-extension-4
 	)"]))],
 	[AS_VAR_SET([NAUTILUS_EXTENSION_DIR], m4_normalize(["$(
-		"${PKG_CONFIG}" --variable=extensiondir libnautilus-extension
+		"${PKG_CONFIG}" --variable=extensiondir libnautilus-extension-4
 	)"]))])
 
 AC_SUBST([NAUTILUS_EXTENSION_DIR])
