--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "Nautilus Launch",
-	"version": "1.0.6",
+	"version": "2.0.0",
 	"description": "A simple Nautilus extension that allows to run executables and launchers via right-click menu",
 	"homepage": "https://gitlab.gnome.org/madmurphy/nautilus-launch",
 	"author": "madmurphy333@gmail.com",
@@ -11,7 +11,7 @@
 	},
 	"dependencies": {
 		"glib2": "*",
-		"libnautilus-extension": "*",
+		"libnautilus-extension": ">=4",
 	},
 	"devDependencies": {
 		"gettext": ">=0.19",
